--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="boxTextLogin">#D3D3D3</color>
+    <color name="textos">#D3D3D3</color>
+    <color name="botao">#054A93</color>
 </resources>
